--- a/css/modules.css
+++ b/css/modules.css
@@ -1,47 +1,99 @@
-@media only screen and (max-width : 320px){
-  .background{
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-  }
+*:focus{
+  outline: 0;
+}
+
+html, body, .container{
+  height: 100%;
+}
+
+body > .container {
+  height: auto; min-height: 100%;
 }
 
 .background {
   position: fixed;
-  display: block;
-  margin: 0 auto;
   z-index: -1;
   width: 100%;
 }
 
 #title{
-  position: relative;
   font-size: 3em;
   font-family: 'Lobster', cursive;
   color: white;
-  text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+.content-info h1{
+  font-size: 35px;
+}
+
+.content-info{
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+.content-info p{
+  font-size: 18px;
+}
+
+#login{
+  text-align: center;
+  color: white;
+  opacity: 1;
+  border-radius: 5px;
+  border-style: none;
+  background-color: rgba(255,255,255,0.3);
+  width: 100px;
+  height: 50px;
+  margin-top: 8px;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .space{
-  height: 12em;
+  height: 15em;
 }
 
 .canvas{
   position: relative;
   margin: 0 auto;
-  width: 400px;
-  height: 400px;
-  background-color: white;
-  opacity: 0.6;
-  border-radius: 20px;
+  margin-top:30px;
 }
 
-.canvas__content{
-  position: relative;
-  padding: 10px 10px 10px 10px;
-  width: 400px;
-  height: 400px;
+.inputs input{
+  display: block;
+  margin: 0 auto;
+  width: 290px;
+  height: 40px;
+  border-style: none;
+  border-bottom: 1px solid lightgrey;
   background-color: white;
-  opacity: 1;
-  border-radius: 20px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  opacity: 0.9;
+  padding: 0px 0px 5px 5px;
+}
+
+#email{
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+
+#password{
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+.signup{
+  display: block;
+  margin: 0 auto;
+  width: 295px;
+  height: 45px;
+  border-radius: 3px;
+  color: white;
+  background-color: #6699CC;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  border-style: none;
+  opacity: 0.9;
 }
