--- a/css/primer.css
+++ b/css/primer.css
@@ -39,6 +39,17 @@ header{
   opacity: 1;
 }
 
+#fbnumber{
+  font-size: 12px;
+  position: absolute;
+  width: 40px;
+  height: 17px;
+  margin-left: 8px;
+  margin-top: 5px;
+  color: white;
+  opacity: 0.8;
+}
+
 #title{
   font-size: 3em;
   font-family: 'Lobster', cursive;
@@ -68,7 +79,7 @@ header{
 
 #nav-top li{
   display: inline-block;
-  margin-left: 50px;
+  margin-left: 30px;
   color: white;
   font-family: 'Bree Serif', serif;
   font-size: 15px;
