--- a/css/additem.css
+++ b/css/additem.css
@@ -2,12 +2,14 @@
   border-bottom: 3px solid black;
 }
 
-.dropbox{
+#dropbox{
   background-color: white;
   border-radius: 5px;
   opacity: 0.8;
-  height: 300px;
+  height: 270px;
+  width: 270px;
   margin-top: 130px;
+  border: dotted 10px grey;
 }
 
 .selection-box{
@@ -26,4 +28,12 @@
 
 #add-item{
   margin-top: 10px;
+  width: 130px;
+  height: 50px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: rgba(255,255,255,1);
+  margin-left: 70px;
+  font-family: 'Bree Serif', serif;
+  color: black;
 }
