--- a/css/additem.css
+++ b/css/additem.css
@@ -12,6 +12,16 @@
   border: dotted 10px grey;
 }
 
+#dropbox.hover{
+  border: dotted 10px black;
+}
+
+#dropbox.dropped{
+  opacity: 1;
+  border: dotted 10px black;
+}
+}
+
 .selection-box{
   height: 300px;
   margin-top: 130px;
