--- a/css/primer.css
+++ b/css/primer.css
@@ -1,26 +1,29 @@
-
-.background {
-  position: fixed;
-  z-index: -1;
-  width: 100%;
+body {
+  background: url(../pictures/splash2.jpg) repeat;
+  background-size: 100%;
+  background-attachment: fixed;
 }
 
-.backboard{
+.content{
+  width: 100%;
+  opacity: 1;
+}
+
+/*.wrapper{
   position: fixed;
   display: block;
-  margin-right: 5%;
-  margin-left: 5%;
-  background-color: white;
-  opacity: 0.4;
-  width: 90%;
+  margin-right: 10%;
+  margin-left: 10%;
+  width: 80%;
   height: 100%;
-  z-index: -1;
-}
+  z-index: 1;
+}*/
 
 header{
+  display: block;
+  margin: 0 auto;
   position: fixed;
   width: 100%;
-  height: 43px;
   background-color: #282828;
   border-bottom-right-radius: 5px;
   z-index: 1;
@@ -28,8 +31,7 @@ header{
 
 #fblike{
   position: absolute;
-  width: 40px;
-  height: 17px;
+  width: 42px;
   margin-left: 8px;
   margin-top: 20px;
   opacity: 0.8;
@@ -51,10 +53,15 @@ header{
 }
 
 #title{
+  display: block;
+  position: fixed;
   font-size: 3em;
   font-family: 'Lobster', cursive;
   color: white;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+  z-index: 2;
+  margin-top: 3px;
+  margin-left: 70px;
 }
 
 #title span{
@@ -75,6 +82,8 @@ header{
 #nav-top{
   text-align: right;
   list-style: none;
+  margin-bottom: 10px;
+  margin-right: 13px;
 }
 
 #nav-top li{
@@ -82,7 +91,7 @@ header{
   margin-left: 30px;
   color: white;
   font-family: 'Bree Serif', serif;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 #nav-top li:hover{
@@ -96,11 +105,13 @@ header{
 }
 
 #nav-bottom{
-  position: absolute;
+  display: block;
+  position: relative;
   text-align: center;
   list-style: none;
   margin-top: 10px;
   margin-left: 10px;
+  margin-bottom: 0px;
   background-color: white;
   padding-top: 50px;
   border-bottom-right-radius: 5px;
@@ -124,3 +135,79 @@ header{
   transition:.3s;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+#title{
+  margin-top: 12px;
+  font-size: 2.3em;
+}
+
+#title:hover{
+  font-size: 2.7em;
+}
+
+#nav-bottom li{
+  font-size: 16px;
+}
+
+#nav-top li{
+  font-size: 14px;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+
+body{
+  background-size: 130%;
+}
+
+header{
+border-bottom-left-radius: 5px;
+position: relative;
+}
+
+#title{
+  text-align: center;
+  position: absolute;
+  font-size: 60px;
+  margin-left: 12px;
+}
+
+#fblike, #fbnumber{
+  display: none;
+  position: relative;
+}
+
+#title:hover{
+  font-size: 60px;
+}
+
+#nav-top{
+  position: relative;
+  margin-left: 0px;
+  margin-top: 80px;
+  text-align: center;
+}
+
+#nav-top li{
+  font-size: 20px;
+  margin-left: 0px;
+  padding: 0px 15px 0px 0px;
+}
+
+
+#nav-bottom{
+  padding: 0px 0px 0px 0px;
+  margin-top: 10px;
+  margin-left: 0px;
+  border-radius: 5px;
+}
+
+#nav-bottom li{
+  padding: 15px 0px 0px 0px;
+  font-size: 23px;
+  height: 50px;
+}
+
+}
