--- a/css/additem.css
+++ b/css/additem.css
@@ -1,3 +1,4 @@
+
 #nav-1{
   border-bottom: 3px solid black;
 }
@@ -10,11 +11,17 @@
   width: 270px;
   margin-top: 130px;
   border: dotted 10px grey;
+  display: block;
+}
+
+.dropbox{
+  display: block;
 }
 
 .selection-box{
   height: 300px;
   margin-top: 130px;
+  display: block;
 }
 
 .selection-type{
@@ -36,4 +43,38 @@
   margin-left: 70px;
   font-family: 'Bree Serif', serif;
   color: black;
+  opacity: 0.8;
+}
+
+#add-item:hover{
+  opacity: 1;
+}
+
+@media only screen and (max-width: 767px) {
+
+
+
+#dropbox{
+  margin-top: 10px;
+  margin-left: 4px;
+}
+
+.selection-type{
+  width: 100%;
+  margin-top: 10px;
+}
+
+.selection-color{
+  width: 100%;
+  margin-top: 10px;
+}
+
+#add-item{
+  font-size: 23px;
+  opacity: 1;
+  width: 100%;
+  height: 50px;
+  margin-left: 0px;
+}
+
 }
