--- a/css/closet.css
+++ b/css/closet.css
@@ -1,9 +1,16 @@
+.space{
+  height: 0px;
+  display: none;
+}
+
 #nav-2{
   border-bottom: 3px solid black;
 }
 
 .top-section{
-  margin-top: 100px;
+  position: relative;
+  display: block;
+  margin-top: 20px;
   background-color: white;
   height: 270px;
   width: 20em;
@@ -42,12 +49,18 @@
   border-radius: 5px;
   border-style: none;
   background-color: rgba(255,255,255,1);
-  margin-left: 70px;
+  margin-left: 670px;
   font-family: 'Bree Serif', serif;
   color: black;
+  opacity: 0.8
+}
+
+#generate:hover{
+  opacity: 1;
 }
 
 #additem{
+  display: block;
   margin-top: 10px;
   width: 130px;
   height: 50px;
@@ -57,5 +70,25 @@
   margin-left: 10px;
   font-family: 'Bree Serif', serif;
   color: black;
+  opacity: 0.8;
 }
 
+#additem:hover{
+  opacity: 1;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+#generate{
+  margin-left: 477px;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+
+#generate{
+  margin-left: 20px;
+}
+
+}
