--- a/css/closet.css
+++ b/css/closet.css
@@ -2,7 +2,10 @@
   height: 0px;
   display: none;
 }
-
+.picture{
+  height: 250px;
+  width: 250px;
+}
 #nav-2{
   border-bottom: 3px solid black;
 }
