--- a/css/modules.css
+++ b/css/modules.css
@@ -28,6 +28,10 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+#login-button:hover{
+  background-color: rgba(255,255,255,0.5);
+}
+
 
 .login-inputs input{
   /*display: block;*/
