--- a/css/contact.css
+++ b/css/contact.css
@@ -3,11 +3,7 @@
   background-color: rgba(255,255,255,0.8);
   border-radius: 5px;
   font-family: 'Bree Serif', serif;
-}
-
-.contact-info span{
-  margin-left: 20px;
-  margin-right: 20px;
+  padding: 20px 20px 20px 20px;
 }
 
 .google{
@@ -18,6 +14,13 @@
 
 .contact-info{
   font-size: 80%;
+}
+}
+
+@media only screen and (max-width: 767px) {
+
+#nav-bottom{
+margin-bottom: 10px;
 }
 
 }
