--- a/css/matchup.css
+++ b/css/matchup.css
@@ -55,6 +55,33 @@
   transition:.3s;
 }
 
+#chaos{
+  position: relative;
+  margin-top: 10px;
+  width: 130px;
+  height: 50px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: rgba(255,255,255,1);
+  margin-left: 70px;
+  font-family: 'Bree Serif', serif;
+  color: black;
+  opacity: 0.8;
+}
+
+#chaos:hover{
+  background-color: #CC0033;
+  color: white;
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+  opacity: 1;
+  font-size: 18px;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+  transition:.3s;
+}
+
 @media only screen and (max-width: 767px) {
 
 #nav-3{
