--- a/css/about.css
+++ b/css/about.css
@@ -13,4 +13,27 @@
 .about-box p {
   margin-left: 20px;
   margin-right: 20px;
+  padding-bottom: 10px;
+}
+
+img {
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+.about-box {
+  font-size: 80%;
+}
+
+}
+
+@media only screen and (max-width: 767px) {
+
+  img {
+    width: 100%;
+  }
+
 }
