--- a/css/closet.css
+++ b/css/closet.css
@@ -45,7 +45,7 @@
   padding: 10px 10px 10px 10px;
 }
 
-#generate{
+#matchup{
   margin-top: 10px;
   width: 130px;
   height: 50px;
@@ -58,7 +58,7 @@
   opacity: 0.8
 }
 
-#generate:hover{
+#matchup:hover{
   opacity: 1;
 }
 
@@ -82,7 +82,7 @@
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 
-#generate{
+#matchup{
   margin-left: 477px;
 }
 
@@ -90,7 +90,7 @@
 
 @media only screen and (max-width: 767px) {
 
-#generate{
+#matchup{
   margin-left: 20px;
 }
 
