--- a/css/about.css
+++ b/css/about.css
@@ -21,6 +21,14 @@ img {
   border-radius: 5px;
 }
 
+.logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+ul {
+  list-style-type: none;
+}
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 
@@ -36,4 +44,9 @@ img {
     width: 100%;
   }
 
+.logo {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
